2008-07-15  Adrian Robert <Adrian.B.Robert@gmail.com>

	* Makefile.in: Correct additions for nsfont.o in last commit.
	* nsfont.m: New file (forgot last commit).

2008-07-15  Adrian Robert <Adrian.B.Robert@gmail.com>

	Changes and additions for NeXTstep windowing system (Cocoa and
	GNUstep) support.

	* Makefile.in
	* config.in: Support defines and build commands for NS port.
	* blockinput.h (BLOCK_INPUT, UNBLOCK_INPUT, TOTALLY_UNBLOCK_INPUT)
	(UNBLOCK_INPUT_TO): Don't use under NS unless EXPERIMENTAL_CONTROL_G.
	* callproc.c (set_initial_environment): Initialize
	Vprocess_environment under CANNOT_DUMP (fixes crash when
	batch-compiling for bootstrap, due to Chris Hall).
	* dispextern.h: Include nsgui.h and add needed typedefs under NS
	windowing.
	(struct face): Add synth_ital field.
	* dispnew.c: Include nsterm.h when compiling under NS windowing.
	(init_display): Initialize Vinitial_window_system to "ns" when so
	compiled.
	* emacs.c: Include GSConfig.h when compiling under GNUstep.
	(display_arg): Use under NS.
	(main): Under NS, allocate autorelease pool and handle command line
	args.  Move syms_of_xmenu() call under #ifdef HAVE_X_WINDOWS.
	(standard_args): Add NS-specific args.
	(shut_down_emacs): Shut down NS terminal if compiled under NS.
	* font.c (DEFAULT_ENCODING): New variable.
	(font_find_for_lface): Use it.
	(syms_of_font): Load syms_of_nsfont under NS.
	* font.h: Declare nsfont_driver when compiled under NS.
	* fontset.c: When compiling under NS, include nsterm.h.
	(fontset_from_font): Autoconstruct fontset under NS.
	* frame.c (various): Under NS, include nsterm.h, add Qns window system
	symbol, document and use it.
	(make_initial_frame): Call init_frame_faces(f) in CANNOT_DUMP case --
	patch to fix crash due to different init order, due to Chris Hall and
	Yamamoto Mitsuharu.
	(do_switch_frame): When for_deletion under Cocoa, add
	Fraise_frame(Qnil).
	(x_set_frame_parameters): Ensure font attribute changes are picked up.